--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,7 +1,48 @@
 .nav_area{
-    width: 100%;
-    height: 10%;
-    border: solid 1px black;
-    /* margin-left: 20vw; */
+    width: 80vw;
+    height: 10vh;
     background: red;
+    display: flex;
+}
+.coins{
+    width: 20vw;
+    height:10vh;
+    background: #242121;
+    float: right;
+}
+.nv-options{
+    width: 80vw;
+    height: 10vh;
+    background: #8b7b7b;
+    text-align:center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+.Add-hand{
+    padding: 20px 40px;
+    border-radius: 15px;
+    border: none;
+    width: 20vw;
+    transition: background 0.2s ;
+    position: relative;
+}
+.Add-hand:hover{
+    background: #ce8526;
+    cursor: pointer;
+
+}
+.Add-hand::before{
+    content: "";
+    position: absolute;
+    background: #000;
+    width: 48px;
+    height: 48px;
+    background: url("../../assets/hand.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 0;
+    left: 10px;
 }
