--- a/src/components/Flipp/flipp.css
+++ b/src/components/Flipp/flipp.css
@@ -2,5 +2,31 @@
     width: 100%;
     height: 90%;
     /* margin-left: 20vw; */
-    background: blue;
+    background: rgba(71, 23, 1, 0.678);
+}
+
+#lottie {
+    margin: 0 auto;
+    display: block;
+    position: relative;
+}
+#lottie::after {
+    content: "500";
+    color: rgb(47, 233, 47);
+    position: absolute;
+    top: 70%;
+    opacity: 0;
+    left: 60%;
+    /* use apper animation */
+    transition: top 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    font-size: 1rem;
+    font-weight: 700;
+    display: block;
+}
+#lottie.active::after {
+    top: 35%;
+    opacity: 0.5;
+}
+#lottie.unactive::after {
+    display: none;
 }
