--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,15 +1,11 @@
 .nav_area{
     width: 80vw;
     height: 10vh;
-    background: red;
+    /* background: red; */
     display: flex;
 }
-.coins{
-    width: 20vw;
-    height:10vh;
-    background: #242121;
-    float: right;
-}
+
+/* design for add hand logo */
 .nv-options{
     width: 80vw;
     height: 10vh;
@@ -45,4 +41,56 @@
     background-position: center;
     top: 0;
     left: 10px;
+}
+
+/* partie de score en nav*/
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+
+.coins{
+    width: 20vw;
+    height:10vh;
+    background: #d3d3d3d3;
+    float: right;
+    opacity: 0.7;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.score{
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.score span{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: #000;
+    background: #d3d3d3d3;
+}
+
+.coin_count{
+    width: 100%;
+    height: 50%;
+    background: #d3d3d3d3;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: #000;
+}
+
+.coin_pic{
+    width: 30%;
+    height: 50%;
+    background: #d3d3d3d3;
+    border-radius: 10px;
 }
